Fixed sidebar from being too tall on smaller screens.

--- a/src/resources/postcss/help-hub.pcss
+++ b/src/resources/postcss/help-hub.pcss
@@ -147,6 +147,9 @@ li.tec-nav__tab {
 .tribe_events_page_tec-events-settings .tribe-settings-form {
 	flex: auto;
 }
+.tribe_events_page_tec-events-settings .tec-settings-form__sidebar {
+	min-height: inherit;
+}
 
 @media (max-width: 1260px) {
 	.tribe_events_page_tec-events-settings .tec-settings-form .tec-settings-infobox {
